# rag-recent-memory-capture

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
connectors/: gmail_ingestion.py  telegram_bot.py
core/: embedding.py  ingestion.py  search.py
db/: db.py  schema.sql
scripts/: generate_sample_data.py
tests/: test_db.py
